# rsonpy

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
python/rsonpy/: .__init__.py.swp  __init__.py
rsonpy/: __init__.py
rsonpy/tests/: test_rsonpy.py
rsonpy/tests/data/: test.json
src/: .lib.rs.swp  lib.rs
