[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rsonpy"
requires-python = ">=3.8"
dynamic = ["version"]

authors = [
    { name = "Charles Paperman", email = "charles.paperman@univ-lille.fr" }
]

keywords = ["Json", "Jsonpath", "Rsonpath"]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
# Recommended: build ABI3 wheels compatible with Python >= 3.8
features = ["pyo3/extension-module", "pyo3/abi3-py38"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"  # optional: for coverage
]
